...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card Holder Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cnb-cd-bQx" customClass="CustomTextField" customModule="CharityDonationApp" customModu
                                                <rect key="frame" x="20" y="20" width="374" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="CardHolder Field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="FaX-6z-4Ml"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="XXXX XXXX XXXX XXXX" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZbZ-H6-O0E" customClass="CustomTextField" customModule="CharityDonationApp" customM
                                                <rect key="frame" x="20" y="90" width="374" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="CardNumber Field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="Phc-N5-e7N"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="MM" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4w3-xQ-OQn" customClass="CustomTextField" customModule="CharityDonationApp" customModuleProvider="ta
                                                <rect key="frame" x="334.5" y="160" width="59" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ExpiryMonth Field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="oth-G3-uvG"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="YYYY " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7g6-cK-PbS" customClass="CustomTextField" customModule="CharityDonationApp" customModuleProvider=
                                                <rect key="frame" x="315.5" y="230" width="78.5" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ExpiryYear Field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="ald-yt-eqZ"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount in THB" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IB3-Ey-evL" customClass="CustomTextField" customModule="CharityDonationApp" customModulePro
                                                <rect key="frame" x="44" y="300" width="350" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="DonationAmount Field"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="SbB-60-ELm"/>
...
                                                <rect key="frame" x="20" y="370" width="374" height="50"/>
                                                <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Donate Button"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="BGL-5i-kmf"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transaction is Successfull. Thanks for the donation" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="
                                <rect key="frame" x="40" y="482.5" width="334" height="42.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="Donation Successfull"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="OK">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
