...
                            <constraint firstAttribute="width" constant="221" id="9Sc-EZ-qkP"/>
                            <constraint firstAttribute="height" constant="221" id="MMI-ZW-fYQ"/>
                        </constraints>
                    </imageView>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DKN-bE-NHN">
                        <rect key="frame" x="40" y="256" width="430" height="24"/>
                        <accessibility key="accessibilityConfiguration" identifier="Charity Name"/>
                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                </subviews>
                <constraints>
...
